--- a/PlanningTime/Views/Planning/_PlanningGrid.cshtml
+++ b/PlanningTime/Views/Planning/_PlanningGrid.cshtml
@@ -67,7 +67,7 @@
                         {
                             date = new DateTime(year, month, dayNumber);
                         }
-
+                            
                         var day = Model?.FirstOrDefault(d => d.Date.Date == date.Date);
                         bool isWeekend = date.DayOfWeek == DayOfWeek.Saturday || date.DayOfWeek == DayOfWeek.Sunday;
                         bool isHoliday = day?.IsDisabled ?? false;
@@ -80,6 +80,7 @@
                                     style="background-color:transparent; border:none;"
                                     data-date="@date.ToString("yyyy-MM-dd")"
                                     data-type="@day?.Type"
+                                    data-id="@day?.EventId"
                             @(isDisabled ? "disabled" : "")>
                                 <div><strong>@date.Day</strong></div>
 
