--- a/PlanningTime/Views/Planning/_PlanningGrid.cshtml
+++ b/PlanningTime/Views/Planning/_PlanningGrid.cshtml
@@ -81,6 +81,7 @@
                                     data-date="@date.ToString("yyyy-MM-dd")"
                                     data-type="@day?.Type"
                                     data-id="@day?.EventId"
+                                    data-typeid="@day?.EventTypeId"
                             @(isDisabled ? "disabled" : "")>
                                 <div><strong>@date.Day</strong></div>
 
